- Fix #45943 (Crash): crash after "money format"
- Fix function documentation (YEAR(), FACTDOUBLE() )
- Fix parsing and error checking for spreadsheet names.
- Fix #46045 (Normal): serious errors in forumulas
- Fix Embedded chart changes titles when opening again
- Fix #44628 (Grave): 1.1 document not read with 1.2 - circular references
- Fix #40150 (Normal): Precision problem in calculations

Until RC1:
----------
New:
- Like all of KOffice: a readonly GUI for embedding into Konqueror
- More DCOP calls

Bugfixes:
- bug fixes
- Fix cancel add embedded document.
- Fix mem leak
- Fix copy/paste attribute.
- Fix offset of rotated text in one case (top/middle)

Until beta2:
------------

- bug fixes
- perfomance enhancements
- print functions:
    - added option for print grid, comment indicator and formula indicator
    - added print range definiton
    - added repeat columns & rows on printout
    - added "<pages>" macro in header/footer
- paper layout now a property of sheet (not the whole workbook)
- header/footer now a property of sheet (not the whole workbook)
- Settings in paper layout are now undoable
- Sort enhanced for
    - sorting by up to three rows or columns
    - possibility of putting the result of sorting some place else
    - you can use a custom lists (like days of week) as a primary key
    - option if you want to copy the layout or not
    - you can define a row header which gets copied but not sorted
- auto continuation support for every direction and all types supported in
  KSpread and for more complex series like 1,3,4,6,...
- just one "copy" instead of "copy" and "copy as text"
- insertion of series supports now doubles and decreasing series
- support for inserting data from SQL databases
- implemented "Goal Seek"
- implemented new shortcuts for cell formating 
- implemented "Insert from text file" and "Insert formated clipboard data"
- Added "Text to Column"
- improved Data Consolidate, with more choices: Sum, Average, Count,